--- a/app.json
+++ b/app.json
@@ -13,13 +13,20 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+    "NSMicrophoneUsageDescription": "Allow this app to record your voice for chat messages."
+  }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": [
+    "android.permission.RECORD_AUDIO"
+  ],
+      
       "edgeToEdgeEnabled": true
     },
     "web": {
