--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "^7.9.0",
     "@supabase/supabase-js": "^2.90.1",
     "babel-preset-expo": "~54.0.9",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.31",
+    "expo-av": "~16.0.8",
     "expo-file-system": "~19.0.21",
     "expo-image-picker": "~17.0.10",
     "expo-status-bar": "~3.0.9",
