--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
+    "expo-blur": "^15.0.8",
     "expo-file-system": "~19.0.21",
     "expo-image-picker": "~17.0.10",
     "expo-status-bar": "~3.0.9",
